fixing problem with image alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require_self
  */
 
+/*   ORIGINAL CODE */
 html, body {
   height: 100%;
   font-family: 'Raleway', sans-serif;
@@ -68,44 +69,6 @@ h1 {
   color: #ff005a;
 }
 
-/*search form over 767 px width*/
-
-#search-box {
-  margin-top: 10px;
-  margin-right: 15px;
-  margin-left: 15px;
-}
-
-.search-xl {
-  width: 150px;
-  height: 34px;
-  border: 1px solid #ff7f7f;
-  border-radius: 4px;
-  color: #ff7f7f;
-}
-
-.btn-search-color { background-color: #ffb2b2; }
-
-@media(min-width: 768px) {
-  #search-box-xs { display: none; }
-}
-
-/*search form under 767 px width*/
-
-.search-xs {
-  margin-top: 15px;
-  width: 100px;
-  height:20px;
-  border: 1px solid #ff7f7f;
-  border-radius: 4px;
-  color: #ff7f7f;
-}
-
-
-@media(max-width: 767px) {
-  #search-box { display: none; }
-}
-
 /*common search styles*/
 .icon-search { color: red; }
 
@@ -121,6 +84,64 @@ h1 {
 }
 
 .btn-login:hover { background-color: red; }
+
+
+/* Wrapper for page content to push down footer */
+#wrap {
+  min-height: 100%;
+  height: auto;
+  /* Negative indent footer by its height */
+  margin: 0 auto -60px;
+  /* Pad bottom by footer height */
+  padding: 0 0 60px;
+}
+
+/*footer
+/* Set the fixed height of the footer here */
+footer { height: 60px; }
+
+.copyright { 
+  padding-top: 20px;
+  color: #ff005a;
+}  
+
+/* VARIATIONS */
+
+/* smartphone styles */
+
+@media (max-width: 767px) {
+  /*login & out button */
+  #sm-login-out { display: none; }
+
+  .setting-comp { display: none; }
+
+  /*search box display? */
+  #search-box { display: none; }
+}
+
+
+/*tablet and desktop styles */
+
+@media (min-width: 768px) {
+  /*login & out button */
+  .xs-login-out { display: none; }
+
+  .setting-mob { display: none; }
+
+  /*search box display? */
+  #search-box-xs { display: none; }
+}
+
+/*search form under 767 px width*/
+
+.search-xs {
+  margin-top: 15px;
+  width: 100px;
+  height:20px;
+  border: 1px solid #ff7f7f;
+  border-radius: 4px;
+  color: #ff7f7f;
+}
 
 /*media queries from 768px to 1100 for smaller navigation bar font*/
 
@@ -140,34 +161,21 @@ h1 {
   .btn-login { font-size: 0.8em; }
 }
 
-/* Wrapper for page content to push down footer */
-#wrap {
-  min-height: 100%;
-  height: auto;
-  /* Negative indent footer by its height */
-  margin: 0 auto -60px;
-  /* Pad bottom by footer height */
-  padding: 0 0 60px;
+/*search form over 767 px width*/
+
+#search-box {
+  margin-top: 10px;
+  margin-right: 15px;
+  margin-left: 15px;
 }
 
-/*login-out session different viewports*/
-@media (min-width: 768px) {
-  .xs-login-out { display: none; }
-
-  .setting-mob { display: none; }
-}
-@media (max-width: 767px) {
-  #sm-login-out { display: none; }
-
-  .setting-comp { display: none; }
+.search-xl {
+  width: 150px;
+  height: 34px;
+  border: 1px solid #ff7f7f;
+  border-radius: 4px;
+  color: #ff7f7f;
 }
 
-/*footer
-/* Set the fixed height of the footer here */
-footer { height: 60px; }
-
-.copyright { 
-  padding-top: 20px;
-  color: #ff005a;
-}  
+.btn-search-color { background-color: #ffb2b2; }
 
